[metadata]
name = Chassis
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/Chassis.py
description = A replacement for patsy better suitable for fully automated use
long_description = file: README.md
keywords = patsy, data science, machine learning, design matrix
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science

[options]
python_requires = >=3.4
zip_safe = True
py_modules = Chassis
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests.SimpleTests
install_requires =
	numpy
	pandas